k8s/apps/meal-planner/meal-planner-api/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meal-planner-api
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: meal-planner-api
  template:
    metadata:
      labels:
        component: meal-planner-api
    spec:
      containers:
        - name: app
          image: gastbob40/meal-planner-api
          imagePullPolicy: Always
          volumeMounts:
            - name: chronodrive-client-config
              mountPath: /etc/chronodrive
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      volumes:
        - name: chronodrive-client-config
          configMap:
            name: chronodrive-client-config
