k8s/apps/meal-planner/meal-planner-api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: meal-planner-api
spec:
  type: ClusterIP
  selector:
    component: meal-planner-api
  ports:
    - name: http
      port: 8080
      targetPort: http
