k8s/apps/meal-planner/meal-planner-api/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "meal-planner-api"
  namespace: "meal-planner"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"

spec:
  ingressClassName: public
  rules:
    - host: "api.meal-planner.gastbob40.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "meal-planner-api"
                port:
                  number: 8080
  tls:
    - hosts:
        - "api.meal-planner.gastbob40.com"
      secretName: "api.meal-planner.gastbob40.com-tls"
